--- a/Youtube.css
+++ b/Youtube.css
@@ -10,7 +10,7 @@
 
   body {
     position: relative;
-    background: whitesmoke;
+    background:#ffffff;
     font-family: "roboto", sans-serif;
   }
 
@@ -29,7 +29,7 @@
     top: 0;
     width: 100%;
     height: 60px;
-    background: rgb(255, 253, 253);
+    background:#89ABE3FF;
     display: flex;
     position: fixed;
     align-items: center;
@@ -39,7 +39,7 @@
     width: 100%;
     height: 2px;
     top: 45%;
-    background: #8f8b8b;
+    background:#89ABE3FF;
     position: absolute;
     transform: translateY((-45%));
   }
@@ -59,7 +59,7 @@
   .search-bar {
     width: 84%;
     height: 100%;
-    border: 2px solid #e0d6d6;
+    border: 2px solid #89ABE3FF;
     font-size: 16px;
     text-transform: capitalize;
   }
@@ -76,10 +76,10 @@
   .search-btn {
     width: 15%;
     height: 100%;
-    background: #f3efef;
+    background:#89ABE3FF;
     border-left: none;
     padding: 5px 0;
-    border: 2px solid #f3eaea;
+    border: 2px solid #89ABE3FF;
   }
   .search-btn img {
     height: 100%;
@@ -110,9 +110,12 @@
     height: 100%;
   }
   #mic{
-    width: 9%;
-      margin-top: -1%;
+    height: 30px;
+    width: 30px;
+      
       margin-left: 7px;
+      background: #89ABE3FF;
+      border: 2px solid #89ABE3FF;
 
   }
 
@@ -205,7 +208,7 @@
     background: #141414;
   }
 
-  #videosResults{
+  #videosResults {
     width: calc(100% - 250px);
     margin-top: 120px;
     margin-left: 250px;
@@ -213,7 +216,17 @@
     padding: 20px;
     display: grid;
     grid-gap: 25px;
-  }
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
+
+#videosResults > div {
+  transition: border 0.3s ease-in-out;
+}
+
+#videosResults > div:hover {
+  border: 2px solid #3498db; 
+}
+
 
 
 
@@ -246,11 +259,12 @@ background-color: turquoise;
     justify-content: space-between;
     padding: 10px;
     display: flex;
-  }
+    color: rgb(67, 67, 67);
+      }
 
   .channel-icon {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     object-fit: cover;
     border-radius: 48%;
   }
